--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             
             <form class="plainForm">
 
-                <div class="input-box">
+                <div class="input-box" id="orgDes">
                     <input type="text" id="org">
                     <label class="inputLbl">Origin</label>
-                </div><button type="button" class="arrowBtn"><i class="fa-solid fa-arrows-left-right"></i></button><div class="input-box">
+                </div><button type="button" class="arrowBtn"><i class="fa-solid fa-arrows-left-right"></i></button><div class="input-box" id="orgDes">
                     <input type="text" id="des">
                     <label class="inputLbl">Destination</label>
                 </div><div class="input-box">
@@ -132,10 +132,10 @@
 
             <form class="trainForm">
 
-                <div class="input-box">
+                <div class="input-box"  id="orgDes">
                     <input type="text" id="org">
                     <label class="inputLbl">origin</label>
-                </div><button type="button" class="arrowBtn"><i class="fa-solid fa-arrows-left-right"></i></button><div class="input-box">
+                </div><button type="button" class="arrowBtn"><i class="fa-solid fa-arrows-left-right"></i></button><div class="input-box"  id="orgDes">
                     <input type="text" id="des">
                     <label class="inputLbl">Destination</label>
                 </div><div class="input-box">
@@ -761,6 +761,38 @@
           </div>
         </div>
       </section>
+
+      <div class="mt-5 pt-5 pb-5 footer">
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-3 col-xs-12 links">
+                  <h4 class="mt-lg-0 mt-sm-3">Quick access</h4>
+                  <ul class="m-0 p-0">
+                      <li>- <a href="#">Home</a></li>
+                      <li>- <a href="#">Tours</a></li>
+                      <li>- <a href="#">Offers</a></li>
+                      <li>- <a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-5 col-xs-12 about-company">
+                  <h1>TravelTix</h1>
+                  <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                  <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+              <h4 class="mt-lg-0 mt-sm-4">Contact Us</h4>
+              <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+              <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+              <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col copyright">
+              <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
+            </div>
+          </div>
+        </div>
+        </div>
 
 
     <script src="myScript.js"></script>
