--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Document</title>
+    <title>My Account</title>
 </head>
 <body id="bd">
     <div class="wrapper">
@@ -53,14 +53,15 @@
                     <label >Email</label>
                 </div>
                 <div class="input-box">
-                    <input type="password" required>
-                    <label >Password</label>
+                    <input id="password" type="password" required>
+                    <label>Password </label>
+                    <div id="x"><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i><i class="fas fa-circle"></i></div>
                 </div>
                 <div class="input-box">
-                    <input type="password" required>
+                    <input id="confirm-password" type="password" required>
                     <label >Confirm Password</label>
                 </div>
-                <button id="signup" type="submit">Sign up</button>
+                <button id="signup" type="submit" onclick="checkPassword()">Sign up</button>
                 <div class="sign-link">
                     <p>Already have an account?<a href="#" onclick="signin()"> Sign in</a></p>
                 </div>
