--- a/reserve.html
+++ b/reserve.html
@@ -21,9 +21,74 @@
 
         <div class="row">
 
-            <div class="col">
+            <div class="col" id="pers1">
 
-                <h3 class="title">personal information</h3>
+                <h3 class="title">personal information <button class="plus-button" type="button" onclick="plus()">+</button> <button class="minus-button" type="button" onclick="minus()">-</button></h3>
+
+                <div class="inputBox">
+                    <span>full name :</span>
+                    <input type="text" placeholder="john deo">
+                </div>
+                <div class="inputBox">
+                    <span class="dropbtn">gender :</span>
+                    <select class="gender">
+                        <option value="">please select one option</option>
+                        <option value="Female">Female</option>
+                        <option value="male">Male</option>
+                        <option value="others">Others</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <span>National Code :</span>
+                    <input type="text" placeholder="0920101010">
+                </div>
+                <div class="inputBox">
+                    <span>Phone Number :</span>
+                    <input type="tel" placeholder="989101010101">
+                </div>
+
+                <div class="inputBox">
+                    <span>Date of birth :</span>
+                    <input type="date" >
+                </div>
+
+            </div>
+            <div class="col" id="pers2">
+
+                <h3 class="title"  style="visibility: hidden;">personal information</h3>
+
+                <div class="inputBox">
+                    <span>full name :</span>
+                    <input type="text" placeholder="john deo">
+                </div>
+                <div class="inputBox">
+                    <span class="dropbtn">gender :</span>
+                    <select class="gender">
+                        <option value="">please select one option</option>
+                        <option value="Female">Female</option>
+                        <option value="male">Male</option>
+                        <option value="others">Others</option>
+                    </select>
+                </div>
+                <div class="inputBox">
+                    <span>National Code :</span>
+                    <input type="text" placeholder="0920101010">
+                </div>
+                <div class="inputBox">
+                    <span>Phone Number :</span>
+                    <input type="tel" placeholder="989101010101">
+                </div>
+
+                <div class="inputBox">
+                    <span>Date of birth :</span>
+                    <input type="date" >
+                </div>
+
+            </div>
+
+            <div class="col" id="pers3">
+
+                <h3 class="title"  style="visibility: hidden;">personal information</h3>
 
                 <div class="inputBox">
                     <span>full name :</span>
@@ -95,6 +160,6 @@
     </form>
 
 </div>    
-<script src="myScript.js"></script>  
 </body>
+<script src="reserve.js"></script> 
 </html>
