--- a/edit.html
+++ b/edit.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>edit info</title>
 </head>
 <body id="bd">
     <div class="wrapper">
@@ -15,13 +19,13 @@
 
         <div class="form-wrapper edit">
             <form action="">
-                <h2>Edit information</h2>
+                <h2 style="color: #fff;">Edit information</h2>
                 <div class="input-box">
-                    <input type="tel" required>
+                    <input id="telNumber" type="tel" required>
                     <label >Phone number</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" required>
+                    <input  id="mailAddress" type="text" required>
                     <label >Email</label>
                 </div>
                 <div class="input-box">
@@ -36,9 +40,21 @@
                     <input type="text" required  onfocus="(this.type='date')" onblur="(this.type='text')">
                     <label >Birth</label>
                 </div>
-                <button id="signup" type="submit">Edit info</button>
+                <button id="signup" type="button" onclick="check2()">Edit info</button>
              
             </form>
+        </div>
+    </div>
+
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+            <!-- <img src="..." class="rounded me-2" alt="..."> -->
+            <strong class="me-auto" style="color: #fff;"></strong>
+            <button type="button" class="close" data-bs-dismiss="toast" aria-label="Close" style="color: #000000; border: 1px solid #fff;">X</button>
+            </div>
+            <div class="toast-body" style="background-color: #fff; color: #000000;">
+            </div>
         </div>
     </div>
 
@@ -53,4 +69,6 @@
     
 </body>
 <script src="login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </html>
