--- a/index.html
+++ b/index.html
@@ -162,6 +162,18 @@
 
     </div>
 
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+            <!-- <img src="..." class="rounded me-2" alt="..."> -->
+            <strong class="me-auto" style="color: #fff;"></strong>
+            <button type="button" class="close" data-bs-dismiss="toast" aria-label="Close" style="color: #000000; border: 1px solid #fff;">X</button>
+            </div>
+            <div class="toast-body" style="background-color: #fff; color: #000000;">
+            </div>
+        </div>
+    </div>
+
     <section class="resTable">
         <!--Table-->
         <table id="table1" class="table table-hover table-fixed">
@@ -540,6 +552,55 @@
     </section>
     <!--packages end-->
 
+    <section id="faq">
+
+        <h2 class="packageText" id="faqText">
+            Frequently Asked Questions
+        </h2> 
+
+        <div class="accordion w-100" id="basicAccordion">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#basicAccordionCollapseOne" aria-expanded="false" aria-controls="collapseOne">
+                How do I make a hotel reservation?
+              </button>
+            </h2>
+            <div id="basicAccordionCollapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
+              <div class="accordion-body">
+                To make a hotel reservation, simply go to our website and enter your destination, travel dates, and number of guests. You will then be presented with a list of available hotels and rooms. Select the hotel and room that you want, and complete the booking process by entering your personal and payment information.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#basicAccordionCollapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                What types of payment do you accept?
+              </button>
+            </h2>
+            <div id="basicAccordionCollapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
+              <div class="accordion-body">
+                We accept a variety of payment methods, including credit cards, debit cards, and PayPal. You can choose your preferred payment method during the booking process.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#basicAccordionCollapseThree" aria-expanded="false" aria-controls="collapseThree">
+                What if I miss my train or plane?
+              </button>
+            </h2>
+            <div id="basicAccordionCollapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
+              <div class="accordion-body">
+                If you miss your train or plane, please contact us as soon as possible. Depending on the fare rules and availability, we may be able to help you rebook your transportation at an additional cost. However, please note that some tickets may be non-refundable or non-changeable.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <!--special-offer start-->
     <section id="spo" class="special-offer">
         <div class="container">
@@ -713,54 +774,7 @@
     <!--special-offer end-->  
     
     <!-- faq -->
-    <section id="faq">
-
-        <h2 class="packageText" id="faqText">
-            Frequently Asked Questions
-        </h2> 
-
-        <div class="accordion w-100" id="basicAccordion">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#basicAccordionCollapseOne" aria-expanded="false" aria-controls="collapseOne">
-                How do I make a hotel reservation?
-              </button>
-            </h2>
-            <div id="basicAccordionCollapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
-              <div class="accordion-body">
-                To make a hotel reservation, simply go to our website and enter your destination, travel dates, and number of guests. You will then be presented with a list of available hotels and rooms. Select the hotel and room that you want, and complete the booking process by entering your personal and payment information.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#basicAccordionCollapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                What types of payment do you accept?
-              </button>
-            </h2>
-            <div id="basicAccordionCollapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo">
-              <div class="accordion-body">
-                We accept a variety of payment methods, including credit cards, debit cards, and PayPal. You can choose your preferred payment method during the booking process.
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#basicAccordionCollapseThree" aria-expanded="false" aria-controls="collapseThree">
-                What if I miss my train or plane?
-              </button>
-            </h2>
-            <div id="basicAccordionCollapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
-              <div class="accordion-body">
-                If you miss your train or plane, please contact us as soon as possible. Depending on the fare rules and availability, we may be able to help you rebook your transportation at an additional cost. However, please note that some tickets may be non-refundable or non-changeable.
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+  
 
       <div class="mt-5 pt-5 pb-5 footer">
         <div class="container">
