--- a/login.html
+++ b/login.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Account</title>
 </head>
 <body id="bd">
@@ -14,7 +18,7 @@
         <div class="curved" id="curved2"></div>
         <div class="form-wrapper sign-in">
             <form action="">
-                <h2>Sign in</h2>
+                <h2 style="color: #fff;">Sign in</h2>
                 <div class="input-box">
                     <input type="text" required>
                     <label >username</label>
@@ -26,7 +30,7 @@
                 <div class="forgot-pass">
                     <a href="#">forgot password?</a>
                 </div>
-                <button id="signin" type="submit"> <a href="index.html">Sign in</a> </button>
+                <button id="signin" type="button" onclick="check()"> <a href="index.html">Sign in</a> </button>
                 <div class="sign-link">
                     <p>Don't have an account?<a href="#" onclick="signup()"> Sign up</a></p>
                 </div>
@@ -43,13 +47,13 @@
 
         <div class="form-wrapper sign-up">
             <form action="">
-                <h2>Sign up</h2>
+                <h2 style="color: #fff;">Sign up</h2>
                 <div class="input-box">
-                    <input type="tel" required>
+                    <input id="telNumber" type="tel" required>
                     <label >Phone number</label>
                 </div>
                 <div class="input-box">
-                    <input type="text" required>
+                    <input id="mailAddress" type="text" required>
                     <label >Email</label>
                 </div>
                 <div class="input-box">
@@ -61,7 +65,7 @@
                     <input id="confirm-password" type="password" required>
                     <label >Confirm Password</label>
                 </div>
-                <button id="signup" type="submit" onclick="checkPassword()">Sign up</button>
+                <button id="signup" type="button" onclick="check()">Sign up</button>
                 <div class="sign-link">
                     <p>Already have an account?<a href="#" onclick="signin()"> Sign in</a></p>
                 </div>
@@ -69,6 +73,21 @@
             </form>
         </div>
     </div>
+    
+
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+        <!-- <img src="..." class="rounded me-2" alt="..."> -->
+        <strong class="me-auto" style="color: #fff;"></strong>
+        <button type="button" class="close" data-bs-dismiss="toast" aria-label="Close" style="color: #fff; border: 1px solid #fff;">X</button>
+        </div>
+        <div class="toast-body" style="background-color: #444; color: #fff;">
+        </div>
+    </div>
+    </div>
+
+
 
     <div class="colors">
         <span id="1" onclick="changeColor('#000000','1')" class="color" style="--clr:#000000;"></span>
@@ -81,4 +100,6 @@
     
 </body>
 <script src="login.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </html>
