--- a/reserve.html
+++ b/reserve.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- custom css file link  -->
     <link rel="stylesheet" href="reserve.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>reserve</title>
 </head>
 <body>
@@ -40,11 +43,11 @@
                 </div>
                 <div class="inputBox">
                     <span>National Code :</span>
-                    <input type="text" placeholder="0920101010">
+                    <input id="natCode" type="text" placeholder="0920101010">
                 </div>
                 <div class="inputBox">
                     <span>Phone Number :</span>
-                    <input type="tel" placeholder="989101010101">
+                    <input id="telNumber" type="tel" placeholder="9101010101">
                 </div>
 
                 <div class="inputBox">
@@ -72,11 +75,11 @@
                 </div>
                 <div class="inputBox">
                     <span>National Code :</span>
-                    <input type="text" placeholder="0920101010">
+                    <input id="natCode" type="text" placeholder="0920101010">
                 </div>
                 <div class="inputBox">
                     <span>Phone Number :</span>
-                    <input type="tel" placeholder="989101010101">
+                    <input  id="telNumber"type="tel" placeholder="989101010101">
                 </div>
 
                 <div class="inputBox">
@@ -105,11 +108,11 @@
                 </div>
                 <div class="inputBox">
                     <span>National Code :</span>
-                    <input type="text" placeholder="0920101010">
+                    <input id="natCode" type="text" placeholder="0920101010">
                 </div>
                 <div class="inputBox">
                     <span>Phone Number :</span>
-                    <input type="tel" placeholder="989101010101">
+                    <input id="telNumber" type="tel" placeholder="989101010101">
                 </div>
 
                 <div class="inputBox">
@@ -133,7 +136,7 @@
                 </div>
                 <div class="inputBox">
                     <span>credit card number :</span>
-                    <input type="number" placeholder="1111-2222-3333-4444">
+                    <input  type="number" placeholder="1111-2222-3333-4444">
                 </div>
                 <div class="inputBox">
                     <span>exp month :</span>
@@ -155,11 +158,24 @@
     
         </div>
 
-        <input  type="submit" value="proceed to checkout" class="submit-btn">
+        <button  type="button"  class="submit-btn" onclick="check()"> proceed to checkout </button>
 
     </form>
+    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header" >
+            <!-- <img src="..." class="rounded me-2" alt="..."> -->
+            <strong class="me-auto" style="color: #000000;"></strong>
+            <button type="button" class="close" data-bs-dismiss="toast" aria-label="Close" style="color: #000000; border: 1px solid #fff; width: 30px ;height: 30px;">X</button>
+            </div>
+            <div class="toast-body" style="background-color: #fff; color: #000000;">
+            </div>
+        </div>
+    </div>
 
 </div>    
 </body>
 <script src="reserve.js"></script> 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </html>
