--- a/html/reserve.html
+++ b/html/reserve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reserve.css">
+    <link rel="stylesheet" href="/style/reserve.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -13,7 +13,7 @@
     <title>reserve</title>
 </head>
 <body>
-    <link rel="icon" type="image/png"  href=icon/travel.png>
+    <link rel="icon" type="image/png"  href="icon/travel.png">
 
 <div class="container">
 
@@ -128,7 +128,7 @@
 
                 <div class="inputBox">
                     <span>cards accepted :</span>
-                    <img src="images/card_img.png" alt="">
+                    <img src="/images/card_img.png" alt="">
                 </div>
                 <div class="inputBox">
                     <span>name on card :</span>
@@ -175,7 +175,7 @@
 
 </div>    
 </body>
-<script src="reserve.js"></script> 
+<script src="/js/reserve.js"></script> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </html>
